# PengiChatbot

./: .prettierignore  Dockerfile  LICENSE  README.md  bun.lockb  docker-compose.yaml  hatch_build.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/: FUNDING.yml
Challenge_3/: compare.py  main.py  model.py  predict.py  test.py
Challenge_3/data/: data.csv
backend/: config.py  dev.sh  main.py  requirements.txt  spa_static_files.py  start.sh  start_windows.bat
backend/apps/: dependencies.py  exceptions.py
backend/apps/audio/: main.py
backend/apps/chats/: config.py  main.py  router.py  schemas.py
backend/apps/chats/naive_rag/: condense_question.py  generate_answer.py  pipeline.py  retrieval.py
backend/apps/documents/: config.py  constants.py  exceptions.py  main.py  router.py  schemas.py  searcher.py  service.py
backend/apps/openai/: config.py  main.py
backend/apps/openai/chains/: condense_question.py  generate_answer.py
backend/apps/openai/prompts/: condense_question.py  generate_answer.py
backend/apps/rag/: main.py  utils.py
backend/apps/webui/internal/migrations/: 001_initial_schema.py
backend/apps/webui/models/: documents.py  models.py
backend/apps/webui/routers/: documents.py
backend/data/: config.json
backend/dto/: form.py
backend/middlewares/: RBACMiddleware.py
backend/utils/: logging.py  utils.py
nginx/: nginx.conf
src/: app.html
src/lib/: constants.ts
src/lib/apis/: index.ts
src/lib/apis/openai/: index.ts
src/lib/apis/streaming/: index.ts
src/lib/components/admin/: Settings.svelte
src/lib/components/admin/Settings/: Connections.svelte  General.svelte
src/lib/components/chart/: AxisX.svelte  AxisY.svelte  BarChart.svelte  LineChart.svelte  PieChart.svelte
src/lib/components/chat/: Chat.svelte  MessageInput.svelte  ModelSelector.svelte  SettingsModal.svelte
src/lib/components/chat/MessageInput/: CallOverlay.svelte  Models.svelte
src/lib/components/chat/Messages/: ResponseMessage.svelte
src/lib/components/chat/ModelSelector/: Selector.svelte
src/lib/components/chat/Settings/: About.svelte  Account.svelte  Audio.svelte  General.svelte  Interface.svelte
src/lib/components/layout/: Navbar.svelte
src/lib/components/workspace/: Models.svelte
src/lib/components/workspace/Models/Knowledge/: Selector.svelte
src/lib/i18n/: index.ts
src/lib/stores/: index.ts
src/lib/utils/: index.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/admin/: +layout.svelte
src/routes/(app)/workspace/: +layout.svelte
src/routes/(app)/workspace/roles/: +page.svelte
src/routes/(app)/workspace/visualizes/: +page.svelte
src/routes/auth/: +page.svelte
src/routes/error/: +page.svelte
static/: opensearch.xml
